<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.registrationscreen.RegistrationActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="?android:attr/colorPrimary"
            android:minHeight="?android:attr/actionBarSize"
            android:theme="?android:attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="Регистрация"
            app:titleTextColor="@color/white" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="852dp"
                android:paddingBottom="16dp">

            <EditText
                    android:id="@+id/emailOfUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="7dp"
                    android:ems="10"
                    android:digits="@string/myAlphaNumeric"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_registration__textView2" />

            <EditText
                    android:id="@+id/passwordOfUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:digits="@string/myAlphaNumeric"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toTopOf="@+id/secondPasswordOfUser"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailOfUser" />

            <EditText
                    android:id="@+id/secondPasswordOfUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:digits="@string/myAlphaNumeric"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toTopOf="@+id/surnameOfUser"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/surnameOfUser" />

            <EditText
                    android:id="@+id/surnameOfUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:digits="@string/myAlphaNumeric"
                    android:hint="@string/Fio"
                    android:inputType="textPersonName|textCapWords"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/secondPasswordOfUser" />

            <EditText
                    android:id="@+id/nameOfUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:digits="@string/myAlphaNumeric"
                    android:inputType="textPersonName|textCapWords"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/surnameOfUser" />

            <EditText
                    android:id="@+id/patronymicOfUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/middle_name"
                    android:digits="@string/myAlphaNumeric"
                    android:inputType="textPersonName|textCapWords"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameOfUser" />

            <EditText
                    android:id="@+id/phoneUserNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:digits="1234567890+-() "
                    android:inputType="number"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/patronymicOfUser"/>

            <TextView
                    android:id="@+id/activity_registration__textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="Личные данные"
                    android:textColor="@color/bottom_menu_background"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/emailOfUser"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/activity_registration__textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"

                    android:layout_marginTop="60dp"
                    android:text="Навыки"
                    android:textColor="@color/bottom_menu_background"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/patronymicOfUser" />

            <RadioGroup
                    android:id="@+id/activity_registration__radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_registration__textView3">

                <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="навык 1" />

                <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="навык 2" />

                <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="навык 3" />

                <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="навык 4" />
            </RadioGroup>

            <Button
                    android:id="@+id/buttonGetSignedUp"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="22dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="8dp"
                    android:text="Зарегистрироваться"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_registration__radioGroup" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>